<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C2B30"
    tools:context=".DetailedNews">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2962FF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily"
            android:textColor="#F6F7F8"
            android:textSize="28sp"
            android:textStyle="normal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="18dp"
            android:fontFamily="@font/armata"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/Detailed_News_Image"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/Detailed_News_Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Detailed_News_Image"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/armata"
                android:text="@string/title"
                android:textColor="#2962FF"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Detailed_News_SubText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Detailed_News_Text"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/subtitle"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/Detailed_News_Content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Detailed_News_SubText"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/content"
                android:textColor="@color/white"
                android:textSize="16sp" />


        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/ReadMoreBtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:backgroundTint="#2962FF"
        android:text="@string/read_more"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:iconTint="#F3EEEE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>